force-app/main/default/objects/Apttus_Approval__FormulaField__c/Apttus_Approval__FormulaField__c.object-meta.xml
<CustomObject>
    <description>Represents a formula field used in approval rules</description>
    <label>Formula Field (Approvals)</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formula Fields (Approvals)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>