force-app/main/default/objects/Apttus_Approval__FormulaField__c/fields/Apttus_Approval__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Type__c</fullName>
    <description>The type of formula field</description>
    <inlineHelpText>The type of formula field</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Relationship</fullName>
                <default>true</default>
                <label>Relationship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>