force-app/main/default/objects/Apttus_Approval__FormulaField__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>